Project user aips (#94)